# the_hard_way

./: Cargo.toml  next_steps.txt  run.sh  valid.sh
shaders/: compile-shaders.sh  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: allocated_buffer.rs  camera.rs  engine.rs  frame_sync.rs  hardware_query.rs  lib.rs  main.rs  pipeline.rs  setup.rs  swapchain.rs  uniform_buffer_object.rs  unsetup.rs  vertex.rs
src/engine/: frame.rs  internals.rs  mod.rs  setup.rs  unsetup.rs
