[package]
name = "the_hard_way"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.22.2"
anyhow = "1"
bytemuck = "1.3.1"
nalgebra = "0.21"
rand = "0.7"

[dependencies.erupt]
git = "https://gitlab.com/Friz64/erupt.git"
rev = "7afd75e7bb9d8e36daf0371f3b9ab4ccb17b2603"
