[package]
name = "the_hard_way"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
erupt = "0.13.0"
openxr = { version = "0.13.0", features = ["loaded"] }
winit = "0.22.2"
anyhow = "1"
bytemuck = "1.3.1"
nalgebra = "0.21"
rand = "0.7"
ctrlc = "3.1.5"
